# Test-repo

./: .bumpversion.cfg  .gitignore  .gitpod.yml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README copy.md  README_ZH.md  i18n.trans.config.json  package.json  pnpm-lock.yaml
ai/: .env.template  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.copilot  Dockerfile.nltkpy  Makefile  README.md  pyproject.toml
ai/.github/workflows/: ai_code_reviewer.yml
ai/ai_copilot/: __main__.py  config.py  data_inference.py  help_inference.py  inference_factory.py
ai/ai_copilot/assistants/: help.py
ai/ai_inference/: __init__.py  inference_factory.py
ai/ai_inference/agents/: __init__.py  base.py  chat.py  copilot.py  creator.py  data.py  qa.py
ai/ai_inference/inference/: base_inference.py  echo_inference.py  openai_inference.py
ai/ai_server/: __main__.py  app.py  copilot_api.py  inference_api.py  tasks.py  trainer_api.py
ai/ai_shared/: api_client_sync.py  config.py  data_source_processor.py  exceptions.py  helper.py  llmodel.py  mock_utils.py  prompt_utils.py  ros.py  send_task.py  tracking.py  types.py  vector.py  vos.py
ai/ai_shared/actions/: base.py  form.py  url.py  wizard.py
ai/ai_shared/ai_setting/: __init__.py  base_ai_setting.py  chat_ai_setting.py  creator_ai_setting.py  data_ai_setting.py  qa_ai_setting.py
ai/ai_shared/ai_setting/schemas/: chat_ai_schema.json  creator_ai_schema.json  data_ai_schema.json  qa_ai_schema.json
ai/ai_shared/copilot/: conversation.py
ai/ai_shared/copilot/models/: __init__.py
ai/ai_shared/databus/: __init__.py  ai_po.py  datasheet.py  field.py  providers.py  record.py
ai/ai_shared/langchain_vika/: baidu_qianfan.py
ai/ai_shared/persist/: README.md  __init__.py  _persist.py  ai_info.py  base.py  data_source.py  training_info.py
ai/ai_shared/suggestion/: __init__.py  providers.py
ai/ai_trainers/: __init__.py  trainer_factory.py
ai/ai_trainers/loaders/: __init__.py  apitable_databus.py  attachments_field_loader.py  base.py  loader_utils.py  markdown_file_loader.py  pdf_loader.py  url_field_loader.py  url_loader.py
ai/ai_trainers/loaders/airagent/: airtable.py  aitable.py  file.py
ai/ai_trainers/refiners/: __init__.py  doc.py  markdown.py  pdf.py
ai/ai_trainers/trainers/: airagent.py  apitable.py  base.py  mock.py
ai/ai_trainers/trainers/copilot/: __init__.py  aitable_copilot.py  vika_copilot.py
ai/databus_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
ai/databus_client/apis/: path_to_api.py  tag_to_api.py
ai/databus_client/apis/paths/: __init__.py  databus.py  databus_dao_get_ai_ai_id.py  databus_dao_get_ai_datasheet_ids_ai_id.py  databus_dao_get_revision_datasheet_id.py  databus_get_datasheet_pack_id.py
ai/databus_client/apis/tags/: __init__.py  crate_api.py  data_dao_api_api.py  data_services_api_api.py
ai/databus_client/model/: __init__.py  ai_po.pyi
ai/databus_client/models/: __init__.py
ai/databus_client/paths/: __init__.py
ai/databus_client/paths/databus/: __init__.py  get.py  get.pyi
ai/databus_client/paths/databus_dao_get_ai_ai_id/: __init__.py  get.py  get.pyi
ai/docs/: action_system.md  ai_setting_schema.md  copilot.md  data_structs.md  infrastructure.md
ai/scripts/: build_ai_server_base.sh  docker_run.sh
ai/scripts/embedding_copilot_docs/: __main__.py  config.py
ai/tests/: client.py  conftest.py  dstV8QmHgwl8HpNq49.json  test_ai_setting.py  test_airagent.py  test_api_mock.py  test_api_response.py  test_api_z.py  test_chroma.ipynb  test_copilot.py  test_core.py  test_databus_client.py  test_llm_baidu_qianfan.py  test_loaders.py  test_persist.py  test_query.py  test_suggestions.py  test_zilliz.ipynb
databus/: .env.template  .gitignore  Cargo.toml  Dockerfile.databus-server  Makefile  README.md
databus/.cargo/: config.toml
databus/aitable-sdk-rust/: Cargo.toml  README.md
databus/aitable-sdk-rust/src/: apitable.rs  client.rs  lib.rs  test_utils.rs
databus/databus-core/: Cargo.toml  api_tip_config.source.json
databus/databus-core/src/: README.md  data_bundle.rs  data_services_manager.rs  data_source_provider.rs  lib.rs  test_add_record_to_action.rs  test_changesets.rs  test_command_manager.rs  test_databus.rs  test_datasheet.rs  test_field.rs  test_get_records.rs  test_record.rs  test_set_records_cmd.rs  test_set_records_cmd_advanced.rs  test_set_records_cmd_basic.rs  test_use.rs  test_view.rs
databus/databus-core/src/config/: mod.rs  (+4 more)
databus/databus-dao-api/: Cargo.toml  Makefile
databus/databus-dao-api/src/: api.rs  api_mock.rs  client.rs  indexdb_utils.rs  lib.rs  providers.rs
databus/databus-dao-db/: Cargo.toml  Makefile
databus/databus-dao-db/src/: dao_manager.rs  lib.rs  providers.rs  redis.rs  rest.rs  user.rs
databus/databus-server/: .swagger-codegen.config.json  Cargo.toml  Makefile  README.md
databus/databus-server-lib/: Cargo.toml
databus/databus-server-lib/src/: lib.rs
databus/databus-server/src/: app_api.rs  data_dao_api.rs  data_services_api.rs  enterprise_fusion_api.rs  fusion_api.rs  main.rs  server_var.rs  shared.rs  util.rs
databus/databus-shared/: Cargo.toml
databus/databus-shared/src/: consts.rs  hashmap_ext.rs  http.rs  json_ext.rs  lib.rs  macros.rs
databus/databus-tablebundle/: Cargo.toml
databus/databus-tablebundle/src/: lib.rs  tablebundle.rs  tests.rs
databus/databus-wasm/: .gitignore  Cargo.toml  Makefile  test-node.js  test.html
databus/databus-wasm/json0-test/: package.json  pnpm-lock.yaml
databus/databus-wasm/lib/: json0.js
databus/databus-wasm/site/: benchmark.js  index.html  package.json
databus/databus-wasm/src/: fetch_client.rs  lib.rs  request_client.rs  utils.rs
databus/databus-wasm/tests/: json0.single.js  json0.single.test.js
databus/docs/: api.md  data.md  dev.md
databus/json0/: .gitignore  Cargo.toml  Makefile  README.md
databus/json0/benches/: Cargo.toml  Makefile  README.md  package-lock.json  package.json  test_json0.js
databus/json0/src/: json0.rs  lib.rs  operation.rs  types.rs
databus/tests/: Makefile  README.md  pom.xml
(+4055 files in other folders)
