[package]
name = "aitable-sdk-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration_tests = []

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
databus_core = { path = "../databus-core" }
databus-server-lib = { path = "../databus-server-lib" }
databus_shared = { path = "../databus-shared" }
reqwest-wasm = "0.11.16"
serde_json = "1.0.103"
serde = "1.0.174"

[dev-dependencies]
tokio-test = "0.4.2"
