[package]
name = "databus_core"
version = "1.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.0.10"
databus_shared = { path = "../databus-shared" }
json0 = { path = "../json0" }
getrandom = { version = "0.2", features = ["js"] }
# zip = "0.6.6"
# tempfile = "3"
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = "0.1.68"
# fred = { version = "6.3.0", features = ["enable-rustls"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
chrono-tz = "0.8.3"
futures = "0.3.28"
http = "0.2.9"
http-serde = "1.1.2"
# mysql_async = { version = "0.32.2", default-features = false, features = [
# "default-rustls",
# ] }
# mysql_common = "0.30.4"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
# napi = { version = "2.13.1", default-features = false, features = [
#   "napi8",
#   "tokio_rt",
#   "anyhow",
#   "serde-json",
# ] }
# napi-derive = "2.13.0"
regex = "1.8.4"
rs-snowflake = "0.6.0"
seahash = "4.1.0"
serde = { version = "1.0.164", features = ["rc"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
# cannot support wasm
# surf = { version = "2.3.2", features = [
#   "encoding",
#   "h1-client-rustls",
# ], default-features = false }
thiserror = "1.0.40"
time = { version = "0.3.22" }
tokio = { version = "1.29.1", features = ["parking_lot", "rt", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url-escape = "0.1.1"
once_cell = "1.18.0"
lrumap = "0.1.0"
rand = "0.8.5"
# lazy_static = "1.4.0"

url = "2.3.0"
strum = "0.25"
strum_macros = "0.25"
utoipa = "4.0.0"
validator = { version = "0.16.1", features = ["derive"] }
uuid = {version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
downcast-rs = "1.2.0"
serde_with = "3.4.0"


[dev-dependencies]
fred = { version = "6.3.0", features = ["enable-rustls", "mocks"] }
pretty_assertions = "1.3.0"
tokio-test = "0.4.2"
rstest = "0.17.0"
rstest_reuse = "0.5.0"
