[package]
name = "databus_dao_api"
version = "1.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
databus_shared = { path = "../databus-shared" }
databus_core = { path = "../databus-core" }
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = "0.1.68"
rand = "0.8.5"
serde_json = "1.0.103"
serde = "1.0.174"
reqwest-wasm = "0.11.16"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
web-sys = "0.3.64"
idb = "0.4.1"
gloo-utils = { version = "0.1", features = ["serde"] }
log = "0.4.6"
wasm-logger = "0.2.0"

[dev-dependencies]
mockito = "1.1.0"
tokio-test = "0.4.2"
