[package]
name = "databus-server-lib"
version = "1.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
databus_core = { path = "../databus-core" }

serde = { version = "1.0.164", features = ["rc"] }
utoipa = "4.0.0"
validator = { version = "0.16.1", features = ["derive"] }
