[package]
name = "databus-server"
version = "1.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "databus-server"
path = "src/main.rs"

[dependencies]
pin-project-lite="^0.2.12"
actix-cors = "0.6.4"
actix-web = "4"
actix-web-httpauth = "0.8.1"
databus_core = { path = "../databus-core" }
databus-server-lib = { path = "../databus-server-lib" }
databus_shared = { path = "../databus-shared" }
databus_dao_db = { path = "../databus-dao-db" }
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }
utoipa = { version = "4.0.0", features = ["actix_extras"] }
serde_qs = {version = "0.12.0", features = ["actix4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
futures = "0.3"
once_cell = "1.18.0"
dotenv = "0.15.0"
anyhow = { version = "1.0.71", features = ["backtrace"] }
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
chrono-tz="0.8.3"
validator = { version = "0.16.1", features = ["derive"] }
sentry = { version = "0.32.1", features = ["default", "anyhow", "log", "tracing"] }
sentry-actix = "0.32.1"
sentry-anyhow = "0.32.1"
[dev-dependencies]
cargo-watch = "8.4.0"
