[package]
name = "databus_shared"
version = "1.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = "0.1.68"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
futures = "0.3.28"
http = "0.2.9"
http-serde = "1.1.2"
regex = "1.8.4"
seahash = "4.1.0"
serde = { version = "1.0.164", features = ["rc"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
thiserror = "1.0.40"
utoipa = "4.0.0"
time = { version = "0.3.22" }
tokio = { version = "1.29.1", features = ["parking_lot", "rt", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url-escape = "0.1.1"
once_cell = "1.18.0"
json0 = { path = "../json0" }
lrumap = "0.1.0"
rand = "0.8.5"


[dev-dependencies]
fred = { version = "6.3.0", features = ["enable-rustls", "mocks"] }
pretty_assertions = "1.3.0"
tokio-test = "0.4.2"
rstest = "0.17.0"
rstest_reuse = "0.5.0"