[package]
name = "databus_tablebundle"
version = "1.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
databus_core = { path = "../databus-core" }
zip = "0.6.6"

tempfile = "3"
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = "0.1.68"
