[package]
name = "json0"
version = "1.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.103"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.72"

[dev-dependencies]
claims = "0.7.1"
proptest = "1.2.0"
rand = "0.8.5"
